--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "slim/slim": "2.*",
         "slim/middleware": "*",
-        "doctrine/cache": "1.3.*"
+        "doctrine/cache": "1.3.*",
+        "jakeasmith/http_build_url": "^1"
     },
     "autoload": {
         "psr-4": {
