--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "require": {
         "slim/slim": "2.*",
         "slim/middleware": "*",
-        "doctrine/cache": "1.3.*",
-        "jakeasmith/http_build_url": "^1"
+        "doctrine/cache": "1.3.*"
     },
     "autoload": {
         "psr-4": {
